Auto Migrations and Seeding Data

--- a/src/Bootstrapper/API/appsettings.json
+++ b/src/Bootstrapper/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection" : "Server=localhost;port=5432;Database=PostgresDb;User Id=sa;Password=sa; Include Error Detail =true"
+  }
 }
